# ledger-recurring

./: .pre-commit-config.yaml  Pipfile  README.md  ledger_recurring.py  pyproject.toml  test_ledger_recurring.py  tox.ini
.github/workflows/: tests.yaml
tests/: test_ledger_recurring.py
