[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-recurring"
version = "0.0.1"
dependencies = [
    "click>=8.1.0",
    "marshmallow>=3.19.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
tests = ["pytest>=7.4.0"]

[project.scripts]
ledger-recurring = "ledger_recurring:main"

[tool.setuptools]
py-modules = ["ledger_recurring"]
